Fix padding on IOS for safari versions that don't support clamp

--- a/acorn-and-oak-photography/src/pages/about-me/about-me.css
+++ b/acorn-and-oak-photography/src/pages/about-me/about-me.css
@@ -13,7 +13,9 @@
 }
 
 .about-me-button-container>div:nth-of-type(1) {
+    padding-right: 8px; /* fallback for non supported browsers */
     padding-right: clamp(8px, 1vw, 24px);
+    margin-right: 8px; /* fallback for non supported browsers */
     margin-right: clamp(8px, 1vw, 24px);
 }
 
